--- a/serverless/resources/storage/serverless.yml
+++ b/serverless/resources/storage/serverless.yml
@@ -8,7 +8,7 @@ provider:
   region: ${opt:region, env:AWS_DEFAULT_REGION, 'us-east-1'}
 
 custom:
-  projectCode: projectCode-${self:provider.stage} # Unique project code that can be used to identify resources created for the project
+  projectCode: jadio-starter-${self:provider.stage} # Unique project code that can be used to identify resources created for the project
   webAppBucketName: ${self:custom.projectCode}-website # Enter a unique bucket name (will fail if the bucket already exists)
 
 resources:
