--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -11,32 +11,42 @@ jobs:
       vmImage: ubuntu-latest
 
     steps:
+
+## Comment out for first deployment - front-end can only deploy once the S3 bucket has been created ------------------------------------ START
+      # - task: NodeTool@0
+      #   inputs:
+      #     versionSpec: ">10.x.x"
+      #     inlineScript: | ##
+      #       cd frontend/sample-web-app
+      #       npm install
+      #       npm run build:prod
+      #       cd ../../
+      #   displayName: Install Frontend dependencies
+
+      # ## Upload the frontend - Comment out for the first deployment
+      # - task: S3Upload@1
+      #   inputs:
+      #     awsCredentials: $(AWS_CREDENTIALS_PROFILE_NAME)
+      #     regionName: $(AWS_DEPLOYMENT_REGION)
+      #     bucketName: $(AWS_DEPLOYMENT_BUCKET)
+      #     sourceFolder: "frontend/sample-web-app/dist/angular-ngrx-material-starter"
+      #     globExpressions: "**"
+      #   env:
+      #     AWS_DEPLOYMENT_BUCKET: $(System.AWS_DEPLOYMENT_BUCKET)
+      #     AWS_DEPLOYMENT_REGION: $(System.AWS_DEPLOYMENT_REGION)
+      #     AWS_CREDENTIALS_PROFILE_NAME: $(System.AWS_CREDENTIALS_PROFILE_NAME)
+      #   displayName: Deploy sample web app hosted in S3
+## Comment out for first deployment ------------------------------------ END
+
       ## Install Node
       - task: NodeTool@0
         inputs:
           versionSpec: ">10.x.x"
           inlineScript: | ##
-            cd frontend/sample-web-app
-            npm install
-            cd ../../
             cd serverless
             npm install
-            cd ../../
-        displayName: Install Dependencies and plugins
-
-      ## Upload the frontend - Comment out for the first deployment
-      - task: S3Upload@1
-        inputs:
-          awsCredentials: $(AWS_CREDENTIALS_PROFILE_NAME)
-          regionName: $(AWS_DEPLOYMENT_REGION)
-          bucketName: $(AWS_DEPLOYMENT_BUCKET)
-          sourceFolder: "frontend/sample-web-app/dist/angular-ngrx-material-starter"
-          globExpressions: "**"
-        env:
-          AWS_DEPLOYMENT_BUCKET: $(System.AWS_DEPLOYMENT_BUCKET)
-          AWS_DEPLOYMENT_REGION: $(System.AWS_DEPLOYMENT_REGION)
-          AWS_CREDENTIALS_PROFILE_NAME: $(System.AWS_CREDENTIALS_PROFILE_NAME)
-        displayName: Deploy front-end sample web app
+            cd ../
+        displayName: Install Serverless Dependencies and plugins
 
       ## Build serverless
       - task: AWSShellScript@1
