--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -12,15 +12,21 @@ jobs:
 
     steps:
 
+      ## Install Node
+      - task: UseNode@1
+        inputs:
+          checkLatest: true
+
 ## Comment out for first deployment - front-end can only deploy once the S3 bucket has been created ------------------------------------ START
-      # - task: NodeTool@0
+      # - task: Bash@3
       #   inputs:
-      #     versionSpec: ">10.x.x"
-      #     inlineScript: | ##
+      #     targetType: 'inline'
+      #     script: | ##
       #       cd frontend/sample-web-app
       #       npm install
       #       npm run build:prod
       #       cd ../../
+      #     workingDirectory: 'frontend/sample-app'
       #   displayName: Install Frontend dependencies
 
       # ## Upload the frontend - Comment out for the first deployment
@@ -37,14 +43,14 @@ jobs:
       #     AWS_CREDENTIALS_PROFILE_NAME: $(System.AWS_CREDENTIALS_PROFILE_NAME)
       #   displayName: Deploy sample web app hosted in S3
 ## Comment out for first deployment ------------------------------------ END
-
-      ## Install Node
-      - task: NodeTool@0
+      - task: Bash@3
         inputs:
-          versionSpec: ">10.x.x"
-        workingDirectory: serverless
-      - bash: npm install -no-cache
-        displayName: Install Serverless Dependencies and plugins
+          targetType: 'inline'
+          script: |
+            # Write your commands here
+            npm install
+          workingDirectory: 'serverless'
+        displayName: Install Serverless Dependencies
 
       ## Build serverless
       - task: AWSShellScript@1
