--- a/serverless/package.json
+++ b/serverless/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "[Serverless Stack](https://serverless-stack.com) is a free comprehensive guide to creating full-stack serverless applications. We create a [note taking app](https://demo2.serverless-stack.com) from scratch.",
   "main": "config.js",
-  "dependencies": 
+  "dependencies": {
     "amazon-cognito-identity-js": "^3.2.2",
     "aws-xray-sdk": "^2.5.0",
     "clean-deep": "^3.3.0",
