--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -22,11 +22,9 @@ jobs:
         inputs:
           targetType: 'inline'
           script: | ##
-            cd frontend/sample-web-app
             npm install
             npm run build:prod
-            cd ../../
-          workingDirectory: 'frontend/sample-app'
+          workingDirectory: 'frontend/sample-web-app'
         displayName: Install Frontend dependencies
 
       ## Upload the frontend - Comment out for the first deployment
