--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -23,7 +23,7 @@ jobs:
           targetType: 'inline'
           script: | ##
             npm install
-            npm run build:prod
+            npm run build
           workingDirectory: 'frontend/sample-web-app'
         displayName: Install Frontend dependencies
 
